<?xml version="1.0"?>
<package format="2">
  <name>dec_pomdp_algorithm</name>
  <version>0.0.0</version>
  <description>The dec_pomdp_algorithm package</description>

  <maintainer email="6tkruege@informatik.uni-hamburg.de">Tobias Krüger</maintainer>

  <license>Apache License, Version 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
