<?xml version="1.0"?>
<package format="2">
  <name>dec_pomdp_msgs</name>
  <version>0.0.0</version>
  <description>The dec_pomdp_msgs package</description>

  <maintainer email="6tkruege@informatik.uni-hamburg.de">Tobias Krüger</maintainer>

  <license>Apache License, Version 2.0</license>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <buildtool_depend>catkin</buildtool_depend>
</package>
