<?xml version="1.0"?>
<package format="2">
  <name>dec_pomdp_server</name>
  <version>0.0.0</version>
  <description>The dec_pomdp_server package</description>

  <maintainer email="6tkruege@informatik.uni-hamburg.de">Tobias Krüger</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
